log
Sun, Mar 23, 2025  1:22:19 PM: 
 tests:  0|6
total_score: 0/70
25021aa
Thu, Mar 27, 2025 12:05:24 PM: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'createList':
list.c:33:16: error: statement with no effect [-Werror=unused-value]
     list->head == NULL;
                ^
list.c:34:16: error: statement with no effect [-Werror=unused-value]
     list->tail == NULL;
                ^
list.c:35:19: error: statement with no effect [-Werror=unused-value]
     list->current == NULL;
                   ^
cc1.exe: all warnings being treated as errors
Compilation failed
1d286ec
Thu, Mar 27, 2025 12:06:46 PM: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
dc75bca
Thu, Mar 27, 2025 12:30:15 PM: 
 list.c | 16 ++++++++++++++--
 1 file changed, 14 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:60:18: error: dereferencing 'void *' pointer [-Werror]
     Nodo->data = *data;
                  ^~~~~
list.c:60:16: error: void value not ignored as it ought to be
     Nodo->data = *data;
                ^
cc1.exe: all warnings being treated as errors
Compilation failed
19b6aa1
Thu, Mar 27, 2025 12:30:55 PM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
572168c
Thu, Mar 27, 2025 12:32:27 PM: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
b5f092a
Thu, Mar 27, 2025 12:34:39 PM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
6dcecef
Thu, Mar 27, 2025 12:36:33 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 15/70
60003bb
Thu, Mar 27, 2025 12:37:32 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d82d253
Thu, Mar 27, 2025 12:43:57 PM: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|0
78b8ada
Thu, Mar 27, 2025 12:45:30 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
43caf3a
Thu, Mar 27, 2025 12:47:14 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f9b43e6
Thu, Mar 27, 2025 12:49:42 PM: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  4|5
total_score: 15/70
7da7ee9
Thu, Mar 27, 2025 12:50:35 PM: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  3|5
total_score: 15/70
2344f8d
Thu, Mar 27, 2025 12:52:11 PM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
00b5746
Thu, Mar 27, 2025 12:53:10 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
6762248
Thu, Mar 27, 2025 12:55:16 PM: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  6|4
total_score: 25/70
650d168
Thu, Mar 27, 2025  1:00:06 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|4
total_score: 25/70
01a0c30
Thu, Mar 27, 2025  6:29:00 PM: 
 list.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  6|4
total_score: 25/70
09bd45d
Thu, Mar 27, 2025  6:29:38 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
12e2149
Thu, Mar 27, 2025  6:33:07 PM: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:70:30: error: 'return' with a value, in function returning void [-Werror]
     if (Nodo == NULL) return NULL;
                              ^~~~
list.c:68:6: note: declared here
 void pushFront(List * list, void * data) {
      ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
e98534a
Thu, Mar 27, 2025  6:35:10 PM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
b7448ce
Thu, Mar 27, 2025  6:38:47 PM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
17f030c
Thu, Mar 27, 2025  6:48:23 PM: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|0
4bcc69a
Thu, Mar 27, 2025  6:53:09 PM: 
 list.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'pushCurrent':
list.c:88:55: error: 'return' with a value, in function returning void [-Werror]
     if (list == NULL || list->current == NULL) return NULL;
                                                       ^~~~
list.c:87:6: note: declared here
 void pushCurrent(List * list, void * data) {
      ^~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
a9debe7
Thu, Mar 27, 2025  6:53:39 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
13cacf5
Thu, Mar 27, 2025  6:53:59 PM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
df6f41c
Thu, Mar 27, 2025  6:54:17 PM: 
 list.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  11|1
total_score: 55/70
4341fc3
Thu, Mar 27, 2025  7:13:53 PM: 
 list.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'popCurrent':
list.c:111:48: error: 'return' with no value, in function returning non-void [-Werror]
     if (list == NULL || list->current == NULL) return;
                                                ^~~~~~
list.c:110:8: note: declared here
 void * popCurrent(List * list) {
        ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
673164a
